reporter-web-app: Fix forced word wrap in package table dependency paths
Rendering of package dependency paths was fixed to 140 px.
This caused package names to be wrapped to the next line even when
there was enough space to render them on a single line

--- a/reporter-web-app/src/App.css
+++ b/reporter-web-app/src/App.css
@@ -49,6 +49,10 @@ https://ant.design/docs/react/customize-theme
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.ort-app .ant-steps-dot .ant-steps-item-content {
+    width: auto;
+}
+
 .ort-app .ort-clickable {
     cursor: pointer;
 }
